--- a/Voter_Registration_Simple/style.css
+++ b/Voter_Registration_Simple/style.css
@@ -9,7 +9,7 @@
 .PaymentOptions form .PaymentType{font-size:16px;font-weight:bold;padding-bottom:4px;width:100%;}
 
 .PayWithCashNotice{
-	font-size:14px;
+	font-size:18px;
 	width:800px;
 	margin-left:auto;
 	margin-right:auto;
@@ -29,25 +29,24 @@
 }
 
 .PayWithCashNotice_VoterInfo{
-	font-size:14px;
+	font-size:18px;
 	width:800px;
 	margin-left:auto;
 	margin-right:auto;
-	font-size:16px;
-
 }
 
 .PayWithCashNotice_WaysOfPayment{
 	padding-top:20px;
-	font-size:14px;
+	font-size:18px;
 	width:800px;
 	margin-left:auto;
 	margin-right:auto;
-	font-size:16px;
 }
 
 .PayWithCashNotice_WaysOfPayment table{
 	width:400px;
+	font-size:18px;
+
 	margin-left:auto;
 	margin-right:auto;
 	text-align:center
@@ -56,6 +55,11 @@
 .PayWithCashNotice_WaysOfPayment table td{
 	padding:5px;
 }
+
+.PayWithCashNotice_WaysOfPayment table td img{
+	width:192px;
+}
+
 
  #ButtonPrint *
 {
